Finished iterations 1 - 10. Still need to fix iteration 11

--- a/starter-code/views/celebrities/show.hbs
+++ b/starter-code/views/celebrities/show.hbs
@@ -2,4 +2,6 @@
 <h2>This is: {{name}}</h2>
 <p>{{occupation}}</p>
 <p>His/her catchphrase is: "{{catchphrase}}"</p>
+<a href="/celebrities/{{_id}}/edit">Edit this celebrity</a>
+<a href="/celebrities">Go back to celebrities list</a>
 {{/with}}
